# whisper-real-time

./: .gitignore  README.md  main.py  pyproject.toml  setup_wsl2_audio.sh
audio/: audio_recorder.py
config/: constants.py
core/: main_window.py
ui/: stt_ui.py
